syntax = "proto3";

package synapsis.v1;

import "google/protobuf/timestamp.proto";
option  go_package = "github.com/khafidprayoga/synapsis-service/v1;synapsisv1";

message DT {
  google.protobuf.Timestamp createdAt = 100; // @gotags: bson:"created_at"
  google.protobuf.Timestamp updatedAt = 200; // @gotags: bson:"updated_at"
  google.protobuf.Timestamp deletedAt = 300; // @gotags: bson:"deleted_at"
}

message Pagination {
  enum SortBy {
    UNSPECIFIED = 0;
    ASC = 1;
    DESC = 2;
  }

  message Page{
    int32 limit = 1;
    int32 offset = 3;
  }

  message Cursor{
    string sortId = 1;
    string fieldName = 2;
    string fieldValue = 3;
  }

  optional Page page = 1;
  optional Cursor cursor = 2;
  optional string search = 3;

  optional google.protobuf.Timestamp startAt = 4;
  optional google.protobuf.Timestamp endAt = 5;

  optional string orderBy = 6; // field or properties name (snake_case)
  optional SortBy sort = 7;

  int64 count = 99;
}